Correction d'un souci sur l'applet : tentative pour rendre l'applet universelle

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -82,6 +82,7 @@
          element.setAttribute('value',0);
          element.text = 'Xemelios';
          selectmethod.appendChild(element);
+         set
 
          divmethod.appendChild(selectmethod);*/
         var divcertif = document.getElementById('listecertif');
@@ -120,7 +121,7 @@
     function getFileLinkFromNumber(i) {
 
         //alert('http://
-
+        console.log()
         document.javaapplet.setFileLinkFromNumber(i, 'http://{{ servername }}/uploads/docs/' + docstosign[i].repourl, docstosign[i].repourl, docstosign[i].id);
 
 
