Modifications sur l'applet (Prise en charge de la dernière version de google chrome)

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -99,6 +99,7 @@
         }
         divcertif.appendChild(selectcertif);
         $('#bouttons').show('slow');
+        setStatusText('Pret à signer');
 
 
     }
