- templates de mail (lien avec url complète) v3

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -33,7 +33,7 @@
 
 <div id="maman">
 <div id="gauche">
-    <a href="{{ app.request.getBaseURL() }}">
+    <a href="{{ url("homepage") }}">
     <div id="logo">
             <img src="{{ asset("/images/2.4.6.logosesile.png") }}"/>
         </div>
