- corrigé : l'envoi du mail de confirmation de cration fait planter la page (page blanche)

--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -26,7 +26,7 @@
     <span class="glyphicon glyphicon-play"></span>
     &nbsp;&nbsp;&nbsp;Titre
 </div>
-<input class="form-control" id="name" name="name" placeholder="Nom">
+<input class="form-control" id="name" name="name" placeholder="Nom" required="required">
 <br>
 
 <div class="titre_form_element">
