--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="{{ asset("/css/bootstrapValidator.min.css") }}"/>
+<script type="text/javascript" src="{{ asset("/js/js/bootstrapValidator.min.js") }}"></script>
+
 <script type="text/javascript" src="{{ asset("/js/bootstrap-datepicker.js") }}"></script>
 <link rel="stylesheet" type="text/css" href="{{ asset("/css/datepicker.css") }}">
 <script src="{{ asset("/js/select2.min.js") }}"></script>
