--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
@@ -14,28 +14,43 @@
     <script type="application/javascript">
 	$(document).ready(function () {
 	    $(".dtables").dataTable({
-		"oLanguage": {
-		    "sSearch": "Rechercher&nbsp;:",
-		    "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
-		    "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
-		    "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
-		    "sZeroRecords": "Aucun enregistrement &agrave; afficher",
-		    "sLengthMenu": "Afficher _MENU_ classeurs par page",
-		    "oPaginate": {
-			"sFirst": "",
-			"sPrevious": "",
-			"sNext": "",
-			"sLast": ""
-		    }
-		},
-		"iDisplayLength": 15,
-		"aLengthMenu": [15, 30, 50, 100],
-		"sDom": 'lft<"footer_datatables"p>',
-		"aoColumnDefs": [
-		    { "bSortable": false, "aTargets": [ 5 ] }
-		],
-		"sPaginationType": "full_numbers"
-	    });
+            processing: true,
+            serverSide: true,
+            ajax: "{{ path("ajax_a_valider") }}",
+            oLanguage: {
+                sSearch: "Rechercher&nbsp;",
+                sInfo: "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+                sInfoEmpty: "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
+                sInfoFiltered: "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
+                sZeroRecords: "Aucun enregistrement &agrave; afficher",
+                sLengthMenu: "Afficher _MENU_ classeurs par page",
+                oPaginate: {
+                    sFirst: "",
+                    sPrevious: "",
+                    sNext: "",
+                    sLast: ""
+                }
+            },
+            iDisplayLength: 15,
+            aLengthMenu: [15, 30, 50, 100],
+            sDom: 'lft<"footer_datatables"ip>',
+            aoColumnDefs: [
+                {
+                    "aTargets": [4],
+                    "mRender": function ( data, type, full ) {
+                        return '<span class="glyphicon statut_' + data + '"></span>';
+                    }
+                },
+                {
+                    aTargets: [5],
+                    bSortable: false,
+                    "mRender": function ( data, type, full ) {
+                        return '<a href="' + Routing.generate('classeur_edit', { id: data }) + '"><span class="glyphicon glyphicon-pencil"></span></a>';
+                    }
+                }
+            ],
+            sPaginationType: "full_numbers"
+        });
 	});
     </script>
     {% endblock %}
