--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -18,28 +18,38 @@
     <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
     <script type="text/javascript">
         $(".dtables").dataTable({
-            "oLanguage": {
-                "sSearch": "Rechercher&nbsp;:",
-                "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
-                "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
-                "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
-                "oPaginate": {
-                    "sFirst": "",
-                    "sPrevious": "",
-                    "sNext": "",
-                    "sLast": ""
-                },
-		"sZeroRecords": "Aucun classeur &agrave; afficher",
-		"sEmptyTable": "Aucun classeur &agrave; afficher",
-		"sLengthMenu": "Afficher _MENU_ classeurs par page"
+            processing: true,
+            serverSide: true,
+            ajax: "{{ path("ajax_classeurs_list") }}",
+            oLanguage: {
+                sSearch: "Rechercher&nbsp;:",
+                sInfo: "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+                sInfoEmpty: "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
+                sInfoFiltered: "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
+                oPaginate: { sFirst: "", sPrevious: "", sNext: "", sLast: "" },
+                sZeroRecords: "Aucun classeur &agrave; afficher",
+                sEmptyTable: "Aucun classeur &agrave; afficher",
+                sLengthMenu: "Afficher _MENU_ classeurs par page"
             },
-            "iDisplayLength": 15,
-            "aLengthMenu": [15, 30, 50, 100],
-            "sDom": 'lft<"footer_datatables"p>',
-            "aoColumnDefs": [
-                { "bSortable": false, "aTargets": [ 5 ] }
+            iDisplayLength: 15,
+            aLengthMenu: [15, 30, 50, 100],
+            sDom: 'lft<"footer_datatables"p>',
+            aoColumnDefs: [
+                {
+                    "aTargets": [4],
+                    "mRender": function ( data, type, full ) {
+                        return '<span class="glyphicon statut_' + data + '"></span>';
+                    }
+                },
+                {
+                    aTargets: [5],
+                    bSortable: false,
+                    "mRender": function ( data, type, full ) {
+                        return '<a href="' + Routing.generate('classeur_edit', { id: data }) + '"><span class="glyphicon glyphicon-pencil"></span></a>';
+                    }
+                }
             ],
-            "sPaginationType": "full_numbers"
+            sPaginationType: "full_numbers"
         });
     </script>
 {% endblock %}
