--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -33,9 +33,10 @@
 
 <div id="maman">
 <div id="gauche">
-    <a href="{{ app.request.schemeAndHttpHost }}">
+    {#<a href="{{ app.request.schemeAndHttpHost }}">#}
+    <a href="http://sesile.dev.sictiam.fr/app_dev.php">
     <div id="logo">
-            <img src="{{ asset("/images/2.4.6.logosesile.png") }}"/>
+            <img src="{{ asset("/images/logos.svg") }}"/>
         </div>
     </a>
 	<img id="separateur_logo" src="{{ asset("/images/gradient-sesile.png") }}"/>
