--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -32,8 +32,8 @@
 
 <div id="maman">
 <div id="gauche">
-    <a href="{{ app.request.getBaseURL() }}">
-    <div id="logo">
+    <a href="{{ app.request.baseUrl }}">
+        <div id="logo">
             <img src="{{ asset("/images/logos.svg") }}"/>
         </div>
     </a>
