correction affichage tableaux divers (historique + documents)

--- a/src/Sesile/ClasseurBundle/Resources/views/Actions/Historique.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Actions/Historique.html.twig
@@ -1,4 +1,4 @@
-<table class="table tableau" id="historiquebug">
+<table class="table tableau historiquebug" id="historiquebug">
     <thead>
     <tr>
         <th>Utilisateur</th>
