- tri par défaut dans les lsites de classeurs - mail qui doit revenir au déposant en cas de finalistion - Log de la signature (à vérifeir tout de même sur différents navigateurs)

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -23,6 +23,7 @@
 
 
     <input type="hidden" name="id" value="{{ classeur.id }}">
+    <input type="hidden" name="moncul" value="1">
 
     <strong>Role : </strong>{{ user.role }}<br/>
     <strong>Ville : </strong>{{ user.ville }}<br/>
