--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
@@ -31,6 +31,7 @@
                     sLast: ""
                 }
             },
+            order: [[ 1, "desc" ]],
             iDisplayLength: 15,
             aLengthMenu: [15, 30, 50, 100],
             sDom: 'lft<"footer_datatables"ip>',
