--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -34,6 +34,7 @@
             iDisplayLength: 15,
             aLengthMenu: [15, 30, 50, 100],
             sDom: 'lft<"footer_datatables"p>',
+            order: [[ 1, "desc" ]],
             aoColumnDefs: [
                 {
                     "aTargets": [4],
