--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -168,6 +168,7 @@
                                             sLast: ""
                                         }
                                     },
+                                    order: [[ 1, "desc" ]],
                                     iDisplayLength: 15,
                                     aLengthMenu: [15, 30, 50, 100],
                                     sDom: 'lft<"footer_datatables"ip>',
@@ -207,6 +208,7 @@
                                             sLast: ""
                                         }
                                     },
+                                    order: [[ 1, "desc" ]],
                                     iDisplayLength: 15,
                                     aLengthMenu: [15, 30, 50, 100],
                                     sDom: 'lft<"footer_datatables"ip>',
