--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -5487,6 +5487,7 @@ a.list-group-item.active > .badge,
     background-color: #ffffff;
     border: 1px solid #dddddd;
     border-radius: 4px;
+    background: #eeeeee;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
