--- a/web/css/dropzone.css
+++ b/web/css/dropzone.css
@@ -1,3 +1,22 @@
+.h3break {
+	margin: 2px 0 22px 0 !important;
+	text-align: center;
+	font-size: 1.25em;
+}
+
+div.caption{
+	text-align: center;
+}
+
+img#fileimgpreview{
+	width: 7em !important;
+	height: 7em !important;
+}
+
+div.row.descriptionfichier {
+	padding: 18px 0px 12px 0px;
+}
+
 img.dropzonefileicon {
 	width: 3em !important;
 	height: 3em !important;
