Liste des utilisateurs : ajout d'un colonne collectivité et tri sur celle-ci par défaut

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -54,6 +54,18 @@
 
             <div class="titre_form_element">
                 <span class="glyphicon glyphicon-play"></span>
+                &nbsp;&nbsp;&nbsp;Commentaire
+            </div>
+            <textarea class="form-control" rows="3" name="comment" disabled id="comment"></textarea>
+            <br>
+            <script>
+                $("#comment").prev(".titre_form_element").click(function() {
+                    $("#comment").toggle();
+                });
+            </script>
+
+            <div class="titre_form_element">
+                <span class="glyphicon glyphicon-play"></span>
                 &nbsp;&nbsp;&nbsp;Date limite de validation
             </div>
             <input class="datepicker" id="validation" name="validation" type="datetime" disabled
