--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_retracter.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_retracter.html.twig
@@ -31,7 +31,10 @@
 		"aLengthMenu": [15, 30, 50, 100],
 		"sDom": 'lft<"footer_datatables"p>',
 		"aoColumnDefs": [
-		    { "bSortable": false, "aTargets": [ 5 ] }
+            { "aTargets": [ 1 ], sClass: "center" },
+            { "aTargets": [ 2 ], sClass: "center" },
+		    { "bSortable": false, "aTargets": [ 5 ], sClass: "center" },
+            { "bSortable": false, "aTargets": [ 6 ], sClass: "center" }
 		],
 		"sPaginationType": "full_numbers"
 	    });
