--- a/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
@@ -2,6 +2,7 @@
 <div id="filedescription" style="display:none"></div>
 
 <script src="{{ asset('js/dropzone.js') }}"></script>
+
 <script type="text/javascript">
 
     var selected = null;
@@ -25,7 +26,6 @@
         $("#filedescription").slideUp();
         openeddesc = false;
         $("input[type=hidden]").each(function () {
-
             if ($(this).val() == selectedFile.name) {
 
                 $(this).remove();
@@ -37,18 +37,53 @@
 
     }
 
+
+
+
+
+
+    /* Bouton grisé lors de l'ajout de fichier  */
+
+    dropzone.on("addedfile", function(file) {
+        $('#Mybutton').attr('disabled',true);
+
+        file.previewElement.addEventListener("click", function() { myDropzone.removeFile(file); });
+    });
+
+
+
+ /* Bouton dégrisé quand le chargement est terminée  */
+
+    dropzone.on("success", function(file) {
+        $('#Mybutton').attr('disabled',false);
+        file.previewElement.addEventListener("click", function() { myDropzone.removeFile(file); });
+    });
+
+
+
+
+    /*Fonction pour ajouter fichier dans le dropzone "classeur à valider"*/
+
     dropzone.on('success', function (file, response) {
         $.each(response, function (serverfilename, originalname) {
             $('#documentcontent').append("<input type='hidden' name='" + serverfilename + "' value='" + originalname + "'> ");
+
+
+
         });
 
     });
+
+
+
+    /* Ajout de fichier selon Format : zip; pdf, png */
 
     dropzone.on("addedfile", function (file) {
         // Access the preview element with file.previewElement and add event listeners, etc... to it.
         $(file.previewElement).find('img').map(function () {
             $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/BLANK/icon_blanc_256.png') }}");
-            //alert(file.type);
+
+
             if (file.type == "application/pdf") {
 
                 $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/PDF/icon_pdf_256.png') }}");
@@ -102,8 +137,10 @@
             }
 
 
+
             $(this).attr("onmouseover", "");
             $(this).unbind('mouseenter mouseleave');
+
         });
         $(file.previewElement).find('div').map(function () {
             $(this).attr("onmouseover", "");
