--- a/src/Sesile/ClasseurBundle/Resources/views/Actions/Historique.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Actions/Historique.html.twig
@@ -4,6 +4,7 @@
         <th>Utilisateur</th>
         <th>Date&nbsp;|&nbsp;Heure</th>
         <th>Action</th>
+        <th>Observation</th>
     </tr>
     </thead>
     <tbody>
@@ -12,7 +13,16 @@
             <td>{{ action.username }}</td>
             <td>{{ action.date | date("d/m/Y") }}&nbsp;|&nbsp;{{ action.date | date("H:i:s") }}</td>
             <td>{{ action.action }}</td>
+            <td>{{ action.observation }}</td>
+
+
         </tr>
     {% endfor %}
     </tbody>
 </table>
+
+
+
+
+
+
