--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
@@ -11,42 +11,51 @@
             <span class="glyphicon glyphicon-ok"></span>
             &nbsp;Valider le classeur
         </button>
+
+
     {% endif %}
 
-<!--
-    <button type="submit" class="btn btn-danger btn-refuser" id="refus" data-action="{{ path("classeur_refuser") }}">
-        <span class="glyphicon glyphicon-remove"></span>
-        &nbsp;Refuser
-    </button>
 
--->
-    <button type="submit" class="btn btn-danger" data-toggle="modal" data-target="#fenetreModal"
-            data-whatever="@mdo">
-        <span class="glyphicon glyphicon-remove"></span>
-        &nbsp;Refuser
 
-        </button>
+
+
 
 
 {% endif %}
 
-{% if retractable %}
-    <form class="form_action" action="{{ path("classeur_retracter") }}" method="post">
-        <button type="submit" class="btn btn-warning"id="retracte">
-            <span class="glyphicon glyphicon-thumbs-down"></span>
-            &nbsp;Se r&eacute;tracter
+
+
+
+
+{% if classeur.isSupprimableByDelegates(usersdelegated) %}
+    <!--  <form id='suprclasseur' class="form_action pull-right" action="{{ path("classeur_supprimer") }}" method="post">
+        <button type="submit" class="btn btn-danger">
+            <span class="glyphicon glyphicon-trash"></span>
+            &nbsp;Retirer
         </button>
         <input type="hidden" value="{{ classeur.id }}" name="id"/>
     </form>
+
+  <button class="btn btn-success pull-right btn-modifs" id="enregister" data-action="{{ path("classeur_valider") }}">
+        <span class="glyphicon glyphicon-saved"></span>
+        &nbsp;Enregistrer les modifications
+    </button>
+
+    <button class="btn btn-success pull-right btn-modifs" id="enregister" data-action="{{ path("classeur_valider") }}">
+        <span class="glyphicon glyphicon-saved"></span>
+        &nbsp;Soumettre
+    </button>
+    -->
+
 {% endif %}
 
 
-<!--<style>
 
-    #enregister {
+
+<style>
+/*    #enregister {
         opacity: .5;
         pointer-events: none;
-
     }
 
     /* #refus{
@@ -55,4 +64,4 @@
           pointer-events: none;
       }*/
 
-</style>-->
+</style>
