--- a/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
@@ -10,7 +10,10 @@
         <table class="table tableau dtables">
             <thead>
             <tr>
+
                 <th>Type de classeur</th>
+                <th>Date de création</th>
+                <th>Tyde de classeur</th>
                 <th>Action</th>
             </tr>
             </thead>
@@ -33,9 +36,74 @@
             </tbody>
         </table>
         <a href="{{ path('new_type_classeur') }}">
-            <button type="button" class="btn btn-default navbar-btn">
+            <button type="button"  class="btn btn-primary navbar-btn">
                 Créer un type de classeur
             </button>
         </a>
+
+        {% include 'SesileClasseurBundle:Classeur:legendeAdmin.html.twig' %}
+
+
     </div>
+
+
+    <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
+    <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
+    <script type="text/javascript">
+        $(".dtables").dataTable({
+            processing: true,
+            serverSide: true,
+            ajax: "{{ path("ajax_classeurs_list") }}",
+            oLanguage: {
+                sSearch: "Rechercher&nbsp;:",
+                sInfo: "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+                sInfoEmpty: "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
+                sInfoFiltered: "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
+                oPaginate: { sFirst: "", sPrevious: "", sNext: "", sLast: "" },
+                sZeroRecords: "Aucun classeur &agrave; afficher",
+                sEmptyTable: "Aucun classeur &agrave; afficher",
+                sLengthMenu: "Afficher _MENU_ classeurs par page"
+            },
+            iDisplayLength: 15,
+            aLengthMenu: [15, 30, 50, 100],
+            sDom: 'lft<"footer_datatables"p>',
+            order: [[ 1, "desc" ]],
+            aoColumnDefs: [
+                {
+                    aTargets: [1],
+                    sClass: "center"
+                },
+                {
+                    aTargets: [2],
+                    sClass: "center"
+                },
+                {
+                    "aTargets": [5],
+                    sClass: "center",
+                    "mRender": function ( data, type, full ) {
+                        return '<span class="glyphicon statut_' + data + '"></span>';
+                    }
+                },
+                {
+                    aTargets: [6],
+                    sClass: "center",
+                    bSortable: false,
+                    "mRender": function ( data, type, full ) {
+                        return '<a href="' + Routing.generate('classeur_edita', { id: data }) + '"><span class="glyphicon glyphicon-pencil"></span></a>';
+                    }
+                }
+            ],
+            sPaginationType: "full_numbers",
+            fnRowCallback: function( nRow, aData, iDisplayIndex, iDisplayIndexFull ) {
+                $(nRow).addClass("classeur-row");
+                $(nRow).dblclick(function (e) {
+                    document.location.href = Routing.generate('classeur_e', { id: aData[6] });
+                });
+                return nRow;
+            }
+        });
+    </script>
+
+
+
 {% endblock %}
