--- a/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/new.html.twig
@@ -1,34 +1,72 @@
 {% extends 'SesileMainBundle:Default:index.html.twig' %}
 
 {% block content %}
+
     <div class="bloc_page">
         <div class="titre_page">
-            <span class="glyphicon glyphicon-list"></span>
-            &nbsp;&nbsp;&nbsp;Créer un type de classeur
+            <span class="glyphicon glyphicon-folder-open"></span>
+            &nbsp;&nbsp;&nbsp;Créer un nouveau classeur
         </div>
-        <form method="post" action="{{ path("create_type_classeur") }}">
-            <div>Nom<input type="text" name="nom" /></div>
-            <div>Groupes :
-            <select name="groupes" multiple>
-            {% for groupe in groupes %}
-                <option value="{{ groupe.id }}">{{ groupe.nom }}</option>
-            {% endfor %}
-            </select>
+        <br>
+        <form id="new_classeur" class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
+
+        <!-- <div>Nom<input type="text" name="nom" /></div> -->
+            <!--<div>Groupes :
+                <select name="groupes" multiple>
+                    {% for groupe in groupes %}
+                        <option value="{{ groupe.id }}">{{ groupe.nom }}</option>
+                    {% endfor %}
+                </select>
+            </div>-->
+            <div>Template :<select name="template" >
+                    {% for template in templates %}
+                        <option value="{{ template.id }}">{{ template.nom }}</option>
+                    {% endfor %}
+                </select>
             </div>
-            <div>Template :
-            <select name="template" >
-                {% for template in templates %}
-                    <option value="{{ template.id }}">{{ template.nom }}</option>
-                {% endfor %}
-            </select>
+            <div class="">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="type" class="col-sm-2 control-label">Type</label>
+
+                        <div class="col-sm-10">
+                            <select id="type" name="type">
+                                <option value="Classique" selected>Divers</option>
+                                <option value="Helios">Hélios</option>
+                                <option value="Acte">Acte Budgétaire</option>
+                                <option value="Marchés">Marchés</option>
+                                <option value="Convocation">Convocation</option>
+                                <option value="Courrier AR">Courrier AR</option>
+                                <option value="Document Urba">Document Urba</option>
+                            </select>
+                            <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
+                        </div>
+                    </div>
+                </div>
             </div>
-	    <br>
+
+            <div id="contenttypedform"></div>
+
+
+            <br>
             <button class="btn btn-success">Enregistrer</button>
-	    <a href="{{ path('liste_type_classeur') }}">
-		<button type="button" class="btn btn-default navbar-btn">
-		    Retour à la page précédente
-		</button>
-	    </a>
+            <a href="{{ path('liste_type_classeur') }}">
+                <button type="button" class="btn btn-default navbar-btn">
+                    Retour à la page précédente
+                </button>
+            </a>
         </form>
     </div>
 {% endblock %}
+
+{% block losjavascriptos %}
+    <script type="text/javascript" src="{{ asset("/bundles/sesileclasseur/js/newclasseur.js") }}">
+
+    </script>
+
+
+
+{% endblock %}
+
+
+
